08_networking/ingress/00-echoserver.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echoserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: ingress-example
spec:
  selector:
    matchLabels:
      app: echoserver
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - name: echoserver
          resources: {}
          image: ealen/echo-server
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: ingress-example
spec:
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: web
  selector:
    run: echoserver
