08_networking/ingress/01-echoserver.yaml
# Echo Server - Application for demonstrating Ingress routing.
# Returns request information including headers, method, path, and body.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - name: echoserver
          image: ealen/echo-server
          resources:
            limits: {}
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: ingress
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: echoserver
