08_networking/ingress/02-vhost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vhost-ingress
  namespace: ingress-example
spec:
  ingressClassName: nginx
  rules:
      # Set correct hostname for managed training 
      # environments (echoserver.clusterxx.training.cloudpirates.io)
    - host: echoserver.127-0-0-1.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: echoserver
                port:
                  name: web
                  # you can also use port->number instead of (servicePort) name
                  # number: 8080
